Use femtocli